# security

canary/: CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  benchmark.sh  cmake_install.cmake  demo.cpp  instruction.py  libinstCanary.cpp  safeCanary  safeCanary.cpp
canary/dynamic_encrypt_redundant_stackguard/: README  dynencryptredundantguard.cpp  dynencryptredundantguard.h  libredundantguard.cpp  offsets.h
canary/infect/: demo2  demo2.c  infect  infect.c  isdynamic.py  perlbench_base.ia64-gcc42
elf_test/: README.MD  abc  add.c  attack_test.c  demo  hack.py  shellcode  shellcode.c  sub.c  testelf  testelf.c  testelf_dynamic  testelf_normal  testelf_static
return-to-dl/: .gdb_history  README.md  demo  exploit.py  test.c
